--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,26 @@ h1 {
 
 #carousel img {
     width: 100%;
-    height: 100%;
+    height:100%;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
     animation-name: transition-effect;
     animation-duration: 1.3s;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.desc-card {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    font-size: 1.2rem;
+    color: #fff;
 }
 
 .fa-solid {
@@ -91,6 +105,8 @@ h1 {
     opacity: 0.5;
 }
 
+
+
 .thumbnails p {
     color: #fff;
     margin-top: 10px;
@@ -108,6 +124,6 @@ h1 {
     display: block;
 }
 
-.thumbnails img.o-none {
+.thumbnails .active{
     opacity: 1;
 }
