--- a/css/style.css
+++ b/css/style.css
@@ -92,18 +92,28 @@ h1 {
 
 }
 
-
-
-.thumbnails img {
-    border-radius: 10px;
+.thumb-card {
     width: calc(100% / 5 - 20px);
     margin: 0 10px;
+}
+
+.desc-thumb-card {
+    color: #fff;
+    margin: 10px 0;
+    font-size: 1.2rem;
+    opacity: 0.7;
+}
+
+.thumbnails img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: right;
     display: block;
     position: relative;
     opacity: 0.5;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 
